# CRM

./: .gitignore  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
backend/: index.ts  package.json
backend/tests/: crm-logic.test.ts  sync-integration.test.ts
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActivitiesTab.tsx  AddToListDialog.tsx  CalendarSettingsTab.tsx  ComposeEmailDialog.tsx  EmailMessage.tsx  EmailSettingsTab.tsx  EmailThreadList.tsx  EntityFormDialog.tsx  EntityTypeahead.tsx  FilterBuilder.tsx
src/components/editor/: CommandList.tsx  HtmlEditor.tsx  RichTextEditor.tsx  slashCommands.ts
src/components/meetings/: Avatar.tsx  MeetingDayCardContent.tsx  MeetingDetailsDialog.tsx  MeetingMonthCard.tsx  MeetingNotSharedContent.tsx  MeetingParticipantsAvatarGroup.tsx  MeetingParticipantsResponseStatus.tsx  MeetingParticipantsResponseStatusField.tsx  MeetingRow.tsx  MeetingsCard.tsx
src/components/notes/: NoteAttachments.tsx  NotesTab.tsx
src/hooks/: useFavorites.ts  useFileUpload.ts  useMeetings.ts  usePaginatedCollection.ts
src/lib/: constants.ts  markdown.ts  meetings.ts  search.ts  types.ts  utils.ts
src/views/: ActivitiesView.tsx  CompaniesView.tsx  ContactDetail.tsx  ContactsView.tsx  Dashboard.tsx  DealsView.tsx  ListView.tsx  NotesView.tsx  SeedView.tsx
